# airpollutionwatch

./: .gitignore  Makefile  README.md  fetch.ipynb  pyproject.toml  千葉サイト分析.ipynb  山梨サイト分析.ipynb  東京サイト分析.ipynb  神奈川サイト分析.ipynb  静岡サイト分析.ipynb
airpollution/: TM20210000.py  chiba.py  convert.py  kanagawa.py  shizuoka.py  tokyo.py  yamanashi.py
airpollution/kanagawa_aux/: V501Station.py  V502Item.py
airpollution/tokyo_aux/: V501Station.py  V502Item.py
airpollution/yamanashi_aux/: V501Station.py  V502Item.py
airpollutionwatch/: amedas.py  chiba.py  convert.py  kanagawa.py  shizuoka.py  tokyo.py  yamanashi.py
