[tool.poetry]
name = "airpollutionwatch"
version = "0.1.0"
description = ""
authors = ["vitroid <vitroid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pandas = "^2.2.2"
lxml = "^5.2.2"
requests-cache = "^1.2.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
