[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
# name = "airpollutionwatch"
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/vitroid/airpollutionwatch"
"Bug Tracker" = "https://github.com/vitroid/airpollutionwatch/issues"

[tool.poetry]
name = "airpollutionwatch"
version = "0.1.5" # major.minor.fix
description = ""
authors = ["vitroid <vitroid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pandas = "^2.2.2"
lxml = "^5.2.2"
requests-cache = "^1.2.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

